Fixed issues from 1/30 Capstone meeting
I fixed the issues brought up in our Capstone meeting on 1/30 including:
I updated the spacing to leave a wider left margin
I updated the spacing of each section. There is now more whitespace between the elements of each section, and between the end of one section and the next
I updated the CSS styles to leave more space between each of the tags, especially on smaller screens
I updated the CSS styling of the submit buttons to have more spacing

--- a/css/pediatrics.css
+++ b/css/pediatrics.css
@@ -99,20 +99,31 @@
       This will be overridden once a value is assigned to the tag via JavaScript code
       Then, the tag will be visible.*/
       display: none;
+
+      /*This CSS is similar to the suggested-tag-button CSS */
       background: #dee2ea;
       border: 2px solid #1f9cd0;
+      margin-left: 1%;
+      margin-bottom: 1%;
     }
   
     .suggested-tag-button {
       background: #dee2ea;
       border: 2px solid #1f9cd0;
       font-size: 18px;
+      margin-left: 1%;
+      margin-bottom: 1%;
+      }
+
+    input {
+      font-size: 18px;
+      margin: 2px;
     }
   
     .pdf-customization-input {
-      background: #dee2ea;  
-      border: 2px solid #1f9cd0;
-        
+      background: #dee2ea;
+      font-size: 18px;
+      margin-top: 2%;
     }
   }
 }
